--- a/about.html
+++ b/about.html
@@ -5,8 +5,12 @@
     <meta charset="utf-8">
     <title>Ssparizzam - About </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="About Sparizzam, Chennai spa, spa retreat, personalized spa treatments, skilled therapists, relaxation" name="keywords">
-    <meta content="Discover Sparizzam, where ancient traditions meet modern relaxation techniques. Our skilled therapists in Chennai provide personalized spa treatments for complete rejuvenation and tranquility." name="description">
+    <meta
+        content="About Sparizzam, Chennai spa, spa retreat, personalized spa treatments, skilled therapists, relaxation"
+        name="keywords">
+    <meta
+        content="Discover Sparizzam, where ancient traditions meet modern relaxation techniques. Our skilled therapists in Chennai provide personalized spa treatments for complete rejuvenation and tranquility."
+        name="description">
 
     <!-- Favicon -->
     <link href="./img/SPARIZZAM PNG-01_logo.png" rel="icon">
@@ -27,11 +31,21 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-68122XXZ2K"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-68122XXZ2K');
+    </script>
 </head>
 
 <body>
-       <!-- Topbar Start -->
-       <div class="container-fluid bg-light d-none d-lg-block">
+    <!-- Topbar Start -->
+    <div class="container-fluid bg-light d-none d-lg-block">
         <div class="row py-2 px-lg-5">
             <div class="col-lg-6 text-left mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center">
@@ -71,7 +85,8 @@
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
             <a href="index.html" class="navbar-brand ml-lg-3">
                 <h1 class="m-0 text-primary"><span class="text-dark">
-                        <img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;" alt="Herbal massage Chennai">
+                        <img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;"
+                            alt="Herbal massage Chennai">
                     </span> </h1>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -121,12 +136,21 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-6 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100" src="img/pexels-elly-fairytale-3865792.jpg" alt="Traditional massage Chennai">
+                    <img class="img-fluid w-100" src="img/pexels-elly-fairytale-3865792.jpg"
+                        alt="Traditional massage Chennai">
                 </div>
                 <div class="col-lg-6">
-                    <h6 class="d-inline-block text-primary text-uppercase bg-light py-1 px-2">About Sparizzam: Your Ultimate Spa Retreat</h6>
+                    <h6 class="d-inline-block text-primary text-uppercase bg-light py-1 px-2">About Sparizzam: Your
+                        Ultimate Spa Retreat</h6>
                     <h1 class="mb-4">Your Best Spa, Beauty & Skin Care Center</h1>
-                    <p class="pl-4 border-left border-primary">At Sparizzam, we blend ancient traditions with modern relaxation techniques to offer an unparalleled spa experience. Located in Thoraipakkam, Chennai, our sanctuary provides a range of therapeutic treatments, including massages, facials, and body scrubs, designed to rejuvenate your body and mind. Our skilled therapists use only the finest products to ensure your comfort and satisfaction. From our serene ambiance to our personalized care, every aspect of Sparizzam is dedicated to helping you unwind and refresh. Whether you're seeking a quick escape or a day of indulgence, Sparizzam is your perfect destination for complete relaxation.</p>
+                    <p class="pl-4 border-left border-primary">At Sparizzam, we blend ancient traditions with modern
+                        relaxation techniques to offer an unparalleled spa experience. Located in Thoraipakkam, Chennai,
+                        our sanctuary provides a range of therapeutic treatments, including massages, facials, and body
+                        scrubs, designed to rejuvenate your body and mind. Our skilled therapists use only the finest
+                        products to ensure your comfort and satisfaction. From our serene ambiance to our personalized
+                        care, every aspect of Sparizzam is dedicated to helping you unwind and refresh. Whether you're
+                        seeking a quick escape or a day of indulgence, Sparizzam is your perfect destination for
+                        complete relaxation.</p>
                     <div class="row pt-3">
                         <div class="col-6">
                             <div class="bg-light text-center p-4">
@@ -228,66 +252,78 @@
     <!-- Team End -->
 
 
-   <!-- Footer Start -->
-   <div class="footer container-fluid position-relative bg-dark pt-5" style="margin-top: 90px;">
-    <div class="container pt-5">
-        <div class="row">
-            <div class="col-lg-6 pr-lg-5 mb-2">
-                <a href="index.html" class="navbar-brand">
-                    
-                    <h1 class="mb-3 text-white"><span class="text-primary"><img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;" alt="Thoraipakkam spa"> &nbsp;SPA</span>rizzam</h1>
-                </a>
-                <p>Experience luxury and tranquility at Sparizzam. Visit us for personalized spa treatments and pure relaxation.</p>
-                <p><i class="fa fa-map-marker-alt mr-2"></i>Old no 1, New no 33, 2nd floor, <br> OMR, Seevaram, Perungudi, <br> Chennai-600096</p>
-                <p><i class="fa fa-phone-alt mr-2"></i>8939456060 ,
-                    8939516060</p>
-                <p><i class="fa fa-envelope mr-2"></i>info@sparizzam.com</p>
-                <div class="d-flex justify-content-start mt-4">
-                    <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i
-                            class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i
-                            class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square" href="#"><i class="fab fa-instagram"></i></a>
+    <!-- Footer Start -->
+    <div class="footer container-fluid position-relative bg-dark pt-5" style="margin-top: 90px;">
+        <div class="container pt-5">
+            <div class="row">
+                <div class="col-lg-6 pr-lg-5 mb-2">
+                    <a href="index.html" class="navbar-brand">
+
+                        <h1 class="mb-3 text-white"><span class="text-primary"><img
+                                    src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;"
+                                    alt="Thoraipakkam spa"> &nbsp;SPA</span>rizzam</h1>
+                    </a>
+                    <p>Experience luxury and tranquility at Sparizzam. Visit us for personalized spa treatments and pure
+                        relaxation.</p>
+                    <p><i class="fa fa-map-marker-alt mr-2"></i>Old no 1, New no 33, 2nd floor, <br> OMR, Seevaram,
+                        Perungudi, <br> Chennai-600096</p>
+                    <p><i class="fa fa-phone-alt mr-2"></i>8939456060 ,
+                        8939516060</p>
+                    <p><i class="fa fa-envelope mr-2"></i>info@sparizzam.com</p>
+                    <div class="d-flex justify-content-start mt-4">
+                        <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i
+                                class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square" href="#"><i class="fab fa-instagram"></i></a>
+                    </div>
                 </div>
-            </div>
-            <div class="col-lg-6 pl-lg-5">
-                <div class="row">
-                    <div class="col-sm-6 mb-5">
-                        <h5 class="text-white text-uppercase mb-4">Quick Links</h5>
-                        <div class="d-flex flex-column justify-content-start">
-                            <a class="text-white-50 mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                            <a class="text-white-50 mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>About
-                                Us</a>
-                            <a class="text-white-50 mb-2" href="service.html"><i class="fa fa-angle-right mr-2"></i>
-                                Services</a>
-                            <a class="text-white-50 mb-2" href="gallery.html"><i class="fa fa-angle-right mr-2"></i>Gallery</a>
-                            <a class="text-white-50" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
+                <div class="col-lg-6 pl-lg-5">
+                    <div class="row">
+                        <div class="col-sm-6 mb-5">
+                            <h5 class="text-white text-uppercase mb-4">Quick Links</h5>
+                            <div class="d-flex flex-column justify-content-start">
+                                <a class="text-white-50 mb-2" href="index.html"><i
+                                        class="fa fa-angle-right mr-2"></i>Home</a>
+                                <a class="text-white-50 mb-2" href="about.html"><i
+                                        class="fa fa-angle-right mr-2"></i>About
+                                    Us</a>
+                                <a class="text-white-50 mb-2" href="service.html"><i class="fa fa-angle-right mr-2"></i>
+                                    Services</a>
+                                <a class="text-white-50 mb-2" href="gallery.html"><i
+                                        class="fa fa-angle-right mr-2"></i>Gallery</a>
+                                <a class="text-white-50" href="contact.html"><i
+                                        class="fa fa-angle-right mr-2"></i>Contact Us</a>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 mb-5">
+                            <h5 class="text-white text-uppercase mb-4">Loaction</h5>
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7776.56691502167!2d80.242577!3d12.953705!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525d000fd7e535%3A0x443208e46579acbf!2ssparizzam!5e0!3m2!1sen!2sin!4v1723695311995!5m2!1sen!2sin"
+                                width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
-                    <div class="col-sm-6 mb-5">
-                        <h5 class="text-white text-uppercase mb-4">Loaction</h5>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7776.56691502167!2d80.242577!3d12.953705!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525d000fd7e535%3A0x443208e46579acbf!2ssparizzam!5e0!3m2!1sen!2sin!4v1723695311995!5m2!1sen!2sin" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<div class="container-fluid bg-dark text-light border-top py-4"
-    style="border-color: rgba(256, 256, 256, .15) !important;">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 text-center text-md-left mb-3 mb-md-0">
-                <p class="m-0 text-white">&copy; <a href="#">sparizzam</a>. All Rights Reserved.</p>
-            </div>
-            <div class="col-md-6 text-center text-md-right">
-                <p class="m-0 text-white">Designed by <a href="https://softwaredevelopmentandgraphicdesign.tech/">SDGD</a></p>
+    <div class="container-fluid bg-dark text-light border-top py-4"
+        style="border-color: rgba(256, 256, 256, .15) !important;">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 text-center text-md-left mb-3 mb-md-0">
+                    <p class="m-0 text-white">&copy; <a href="#">sparizzam</a>. All Rights Reserved.</p>
+                </div>
+                <div class="col-md-6 text-center text-md-right">
+                    <p class="m-0 text-white">Designed by <a
+                            href="https://softwaredevelopmentandgraphicdesign.tech/">SDGD</a></p>
+                </div>
             </div>
         </div>
     </div>
-</div>
-<!-- Footer End -->
+    <!-- Footer End -->
 
 
     <!-- Back to Top -->
