--- a/gallery.html
+++ b/gallery.html
@@ -5,8 +5,11 @@
     <meta charset="utf-8">
     <title>sparizzam - Gallery </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Sparizzam gallery, Chennai spa, spa photos, treatment rooms, relaxing ambiance, luxury spa" name="keywords">
-    <meta content="View the Sparizzam gallery and explore our tranquil spa environment in Chennai. See our luxurious treatment rooms and relaxing ambiance designed for your comfort." name="description">
+    <meta content="Sparizzam gallery, Chennai spa, spa photos, treatment rooms, relaxing ambiance, luxury spa"
+        name="keywords">
+    <meta
+        content="View the Sparizzam gallery and explore our tranquil spa environment in Chennai. See our luxurious treatment rooms and relaxing ambiance designed for your comfort."
+        name="description">
 
     <!-- Favicon -->
     <link href="./img/SPARIZZAM PNG-01_logo.png" rel="icon">
@@ -25,11 +28,21 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-68122XXZ2K"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-68122XXZ2K');
+    </script>
 </head>
 
 <body>
-       <!-- Topbar Start -->
-       <div class="container-fluid bg-light d-none d-lg-block">
+    <!-- Topbar Start -->
+    <div class="container-fluid bg-light d-none d-lg-block">
         <div class="row py-2 px-lg-5">
             <div class="col-lg-6 text-left mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center">
@@ -69,7 +82,8 @@
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
             <a href="index.html" class="navbar-brand ml-lg-3">
                 <h1 class="m-0 text-primary"><span class="text-dark">
-                        <img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;" alt="Steam sauna Chennai">
+                        <img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;"
+                            alt="Steam sauna Chennai">
                     </span> </h1>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -146,11 +160,15 @@
             <div class="row">
                 <div class="col-lg-6 pr-lg-5 mb-2">
                     <a href="index.html" class="navbar-brand">
-                        
-                        <h1 class="mb-3 text-white"><span class="text-primary"><img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;" alt="Relaxation and rejuvenation Chennai"> &nbsp;SPA</span>rizzam</h1>
+
+                        <h1 class="mb-3 text-white"><span class="text-primary"><img
+                                    src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;"
+                                    alt="Relaxation and rejuvenation Chennai"> &nbsp;SPA</span>rizzam</h1>
                     </a>
-                    <p>Experience luxury and tranquility at Sparizzam. Visit us for personalized spa treatments and pure relaxation.</p>
-                    <p><i class="fa fa-map-marker-alt mr-2"></i>Old no 1, New no 33, 2nd floor, <br> OMR, Seevaram, Perungudi, <br> Chennai-600096</p>
+                    <p>Experience luxury and tranquility at Sparizzam. Visit us for personalized spa treatments and pure
+                        relaxation.</p>
+                    <p><i class="fa fa-map-marker-alt mr-2"></i>Old no 1, New no 33, 2nd floor, <br> OMR, Seevaram,
+                        Perungudi, <br> Chennai-600096</p>
                     <p><i class="fa fa-phone-alt mr-2"></i>8939456060 ,
                         8939516060</p>
                     <p><i class="fa fa-envelope mr-2"></i>info@sparizzam.com</p>
@@ -168,18 +186,25 @@
                         <div class="col-sm-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Quick Links</h5>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                                <a class="text-white-50 mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>About
+                                <a class="text-white-50 mb-2" href="index.html"><i
+                                        class="fa fa-angle-right mr-2"></i>Home</a>
+                                <a class="text-white-50 mb-2" href="about.html"><i
+                                        class="fa fa-angle-right mr-2"></i>About
                                     Us</a>
                                 <a class="text-white-50 mb-2" href="service.html"><i class="fa fa-angle-right mr-2"></i>
                                     Services</a>
-                                <a class="text-white-50 mb-2" href="gallery.html"><i class="fa fa-angle-right mr-2"></i>Gallery</a>
-                                <a class="text-white-50" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
+                                <a class="text-white-50 mb-2" href="gallery.html"><i
+                                        class="fa fa-angle-right mr-2"></i>Gallery</a>
+                                <a class="text-white-50" href="contact.html"><i
+                                        class="fa fa-angle-right mr-2"></i>Contact Us</a>
                             </div>
                         </div>
                         <div class="col-sm-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Loaction</h5>
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7776.56691502167!2d80.242577!3d12.953705!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525d000fd7e535%3A0x443208e46579acbf!2ssparizzam!5e0!3m2!1sen!2sin!4v1723695311995!5m2!1sen!2sin" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7776.56691502167!2d80.242577!3d12.953705!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525d000fd7e535%3A0x443208e46579acbf!2ssparizzam!5e0!3m2!1sen!2sin!4v1723695311995!5m2!1sen!2sin"
+                                width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
                 </div>
@@ -194,7 +219,8 @@
                     <p class="m-0 text-white">&copy; <a href="#">sparizzam</a>. All Rights Reserved.</p>
                 </div>
                 <div class="col-md-6 text-center text-md-right">
-                    <p class="m-0 text-white">Designed by <a href="https://softwaredevelopmentandgraphicdesign.tech/">SDGD</a></p>
+                    <p class="m-0 text-white">Designed by <a
+                            href="https://softwaredevelopmentandgraphicdesign.tech/">SDGD</a></p>
                 </div>
             </div>
         </div>
