--- a/service.html
+++ b/service.html
@@ -5,8 +5,11 @@
     <meta charset="utf-8">
     <title>sparizzam - Services </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="parizzam services, Chennai spa services, massages, facials, body scrubs, spa treatments, well-being" name="keywords">
-    <meta content="Explore our wide range of spa services at Sparizzam, including massages, facials, body scrubs, and more. Tailored treatments to enhance your well-being and relaxation." name="description">
+    <meta content="parizzam services, Chennai spa services, massages, facials, body scrubs, spa treatments, well-being"
+        name="keywords">
+    <meta
+        content="Explore our wide range of spa services at Sparizzam, including massages, facials, body scrubs, and more. Tailored treatments to enhance your well-being and relaxation."
+        name="description">
 
     <!-- Favicon -->
     <link href="./img/SPARIZZAM PNG-01_logo.png" rel="icon">
@@ -26,6 +29,16 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-68122XXZ2K"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-68122XXZ2K');
+    </script>
 </head>
 
 <body>
@@ -70,7 +83,8 @@
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
             <a href="index.html" class="navbar-brand ml-lg-3">
                 <h1 class="m-0 text-primary"><span class="text-dark">
-                        <img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;" alt="Tranquil spa Chennai">
+                        <img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;"
+                            alt="Tranquil spa Chennai">
                     </span> </h1>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -124,7 +138,8 @@
             </div>
             <div class="col-lg-6 my-3">
                 <div class="list-group">
-                    <a href="tel:+918939456060" class="list-group-item list-group-item-action active" aria-current="true">
+                    <a href="tel:+918939456060" class="list-group-item list-group-item-action active"
+                        aria-current="true">
                         Makes always beauty & relaxzz
                     </a>
                     <a href="tel:+918939456060" class="list-group-item list-group-item-action">Head Massage</a>
@@ -136,7 +151,8 @@
             </div>
             <div class="col-lg-6 my-3">
                 <div class="list-group">
-                    <a href="tel:+918939456060" class="list-group-item list-group-item-action active" aria-current="true">
+                    <a href="tel:+918939456060" class="list-group-item list-group-item-action active"
+                        aria-current="true">
                         Signature Massage
                     </a>
                     <a href="tel:+918939456060" class="list-group-item list-group-item-action">Reflexology</a>
@@ -151,7 +167,8 @@
             </div>
             <div class="col-lg-6 my-3">
                 <div class="list-group">
-                    <a href="tel:+918939456060" class="list-group-item list-group-item-action active" aria-current="true">
+                    <a href="tel:+918939456060" class="list-group-item list-group-item-action active"
+                        aria-current="true">
                         Miracle Massage
                     </a>
                     <a href="tel:+918939456060" class="list-group-item list-group-item-action">Facial</a>
@@ -164,7 +181,8 @@
             </div>
             <div class="col-lg-6 my-3">
                 <div class="list-group">
-                    <a href="tel:+918939456060" class="list-group-item list-group-item-action active" aria-current="true">
+                    <a href="tel:+918939456060" class="list-group-item list-group-item-action active"
+                        aria-current="true">
                         Relaxz Massage
                     </a>
                     <a href="tel:+918939456060" class="list-group-item list-group-item-action">Head Massage</a>
@@ -175,7 +193,8 @@
             </div>
             <div class="col-lg-12 my-3">
                 <div class="list-group">
-                    <a href="tel:+918939456060" class="list-group-item list-group-item-action active" aria-current="true">
+                    <a href="tel:+918939456060" class="list-group-item list-group-item-action active"
+                        aria-current="true">
                         Our Massage List
                     </a>
                     <a href="tel:+918939456060" class="list-group-item list-group-item-action">Balinese Massage</a>
@@ -183,26 +202,37 @@
 
                     <a href="tel:+918939456060" class="list-group-item list-group-item-action">Sports Massage</a>
                     <a href="tel:+918939456060" class="list-group-item list-group-item-action">Deep Tissue Massage</a>
-                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">Head Massage and Toe Aroma Massage</a>
+                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">Head Massage and Toe
+                        Aroma Massage</a>
                     <a href="tel:+918939456060" class="list-group-item list-group-item-action">Keral Massag</a>
                     <a href="tel:+918939456060" class="list-group-item list-group-item-action">Swedish Massage</a>
                     <a href="tel:+918939456060" class="list-group-item list-group-item-action">STEAM</a>
                     <a href="tel:+918939456060" class="list-group-item list-group-item-action">SAUNA</a>
                     <a href="tel:+918939456060" class="list-group-item list-group-item-action">Sense of Siam Massage</a>
                     <a href="tel:+918939456060" class="list-group-item list-group-item-action">Detoxifying Massage</a>
-                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">Abhyanga Massage (2 Hand)</a>
-                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">Abhyanga Massage (4 hand)</a>
+                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">Abhyanga Massage (2
+                        Hand)</a>
+                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">Abhyanga Massage (4
+                        hand)</a>
                     <a href="tel:+918939456060" class="list-group-item list-group-item-action">Synchronized Massage</a>
-                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">Full body scrubbing (Full Body)</a>
-                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">Chocolate/Coffee/Fruit/Lemon/Seasalt</a>
+                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">Full body scrubbing (Full
+                        Body)</a>
+                    <a href="tel:+918939456060"
+                        class="list-group-item list-group-item-action">Chocolate/Coffee/Fruit/Lemon/Seasalt</a>
                     <a href="tel:+918939456060" class="list-group-item list-group-item-action">Spa cream (Full Body)</a>
-                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">Kerala Herbal Powdet Massage (Full
-                    Body)</a>
-                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">Father Massage (Full tody)</a>
-                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">Aroma Massage (Full Body)</a>
-                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">Fruit Massage (Full Body)</a>
-                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">Soil Massage (Full Body)</a>
-                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">Water Massage (Full Body)</a>
+                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">Kerala Herbal Powdet
+                        Massage (Full
+                        Body)</a>
+                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">Father Massage (Full
+                        tody)</a>
+                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">Aroma Massage (Full
+                        Body)</a>
+                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">Fruit Massage (Full
+                        Body)</a>
+                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">Soil Massage (Full
+                        Body)</a>
+                    <a href="tel:+918939456060" class="list-group-item list-group-item-action">Water Massage (Full
+                        Body)</a>
 
                 </div>
             </div>
@@ -398,11 +428,15 @@
             <div class="row">
                 <div class="col-lg-6 pr-lg-5 mb-2">
                     <a href="index.html" class="navbar-brand">
-                        
-                        <h1 class="mb-3 text-white"><span class="text-primary"><img src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;" alt="Kerala body massage Chennai"> &nbsp;SPA</span>rizzam</h1>
+
+                        <h1 class="mb-3 text-white"><span class="text-primary"><img
+                                    src="./img/SPARIZZAM PNG-01_logo.png" style="height: 70px; width: auto;"
+                                    alt="Kerala body massage Chennai"> &nbsp;SPA</span>rizzam</h1>
                     </a>
-                    <p>Experience luxury and tranquility at Sparizzam. Visit us for personalized spa treatments and pure relaxation.</p>
-                    <p><i class="fa fa-map-marker-alt mr-2"></i>Old no 1, New no 33, 2nd floor, <br> OMR, Seevaram, Perungudi, <br> Chennai-600096</p>
+                    <p>Experience luxury and tranquility at Sparizzam. Visit us for personalized spa treatments and pure
+                        relaxation.</p>
+                    <p><i class="fa fa-map-marker-alt mr-2"></i>Old no 1, New no 33, 2nd floor, <br> OMR, Seevaram,
+                        Perungudi, <br> Chennai-600096</p>
                     <p><i class="fa fa-phone-alt mr-2"></i>8939456060 ,
                         8939516060</p>
                     <p><i class="fa fa-envelope mr-2"></i>info@sparizzam.com</p>
@@ -420,18 +454,25 @@
                         <div class="col-sm-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Quick Links</h5>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                                <a class="text-white-50 mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>About
+                                <a class="text-white-50 mb-2" href="index.html"><i
+                                        class="fa fa-angle-right mr-2"></i>Home</a>
+                                <a class="text-white-50 mb-2" href="about.html"><i
+                                        class="fa fa-angle-right mr-2"></i>About
                                     Us</a>
                                 <a class="text-white-50 mb-2" href="service.html"><i class="fa fa-angle-right mr-2"></i>
                                     Services</a>
-                                <a class="text-white-50 mb-2" href="gallery.html"><i class="fa fa-angle-right mr-2"></i>Gallery</a>
-                                <a class="text-white-50" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
+                                <a class="text-white-50 mb-2" href="gallery.html"><i
+                                        class="fa fa-angle-right mr-2"></i>Gallery</a>
+                                <a class="text-white-50" href="contact.html"><i
+                                        class="fa fa-angle-right mr-2"></i>Contact Us</a>
                             </div>
                         </div>
                         <div class="col-sm-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Loaction</h5>
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7776.56691502167!2d80.242577!3d12.953705!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525d000fd7e535%3A0x443208e46579acbf!2ssparizzam!5e0!3m2!1sen!2sin!4v1723695311995!5m2!1sen!2sin" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7776.56691502167!2d80.242577!3d12.953705!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525d000fd7e535%3A0x443208e46579acbf!2ssparizzam!5e0!3m2!1sen!2sin!4v1723695311995!5m2!1sen!2sin"
+                                width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
                 </div>
@@ -446,7 +487,8 @@
                     <p class="m-0 text-white">&copy; <a href="#">sparizzam</a>. All Rights Reserved.</p>
                 </div>
                 <div class="col-md-6 text-center text-md-right">
-                    <p class="m-0 text-white">Designed by <a href="https://softwaredevelopmentandgraphicdesign.tech/">SDGD</a></p>
+                    <p class="m-0 text-white">Designed by <a
+                            href="https://softwaredevelopmentandgraphicdesign.tech/">SDGD</a></p>
                 </div>
             </div>
         </div>
